hphp/hack/test/typecheck/include_once_strict.php.exp
File "include_once_strict.php", line 2, characters 1-30:
Toplevel statements besides requires are not allowed in strict files (Parsing[1002])
