hphp/hack/test/typecheck/include_once_strict.php
<?hh // strict
echo(include_once('baz.php'));
